<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014 - Simone Martucci <martucci.simone.91@gmail.com>
  ~ Copyright (C) 2014 - Mattia Mancini <mattia.mancini.1991@gmail.com>
  ~
  ~ This file is part of Foundme Studente.
  ~
  ~ Foundme Studente is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Foundme Studente is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Foundme Studente.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00222222">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/changePass"
        android:textColor="#ff000000"
        android:id="@+id/tvText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="35dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info_del"
        android:id="@+id/tvInfo"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/tvText"
        android:layout_centerHorizontal="true"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etChangeMail"
        android:hint="@string/reg_mail"
        android:layout_below="@+id/tvInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textColor="#ff000000"
        android:textColorHighlight="#ff000000"
        android:textColorHint="#ff020202" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etOldPass"
        android:hint="@string/reg_old_password"
        android:layout_below="@+id/etChangeMail"
        android:layout_centerHorizontal="true"
        android:textColor="#ff040404"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#ff050505" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_change"
        android:id="@+id/btChange"
        android:layout_below="@+id/etNewPass1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:background="#ff429874" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etNewPass0"
        android:hint="@string/reg_new_pass"
        android:layout_below="@+id/etOldPass"
        android:layout_centerHorizontal="true"
        android:textColor="#ff000000"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#ff000000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etNewPass1"
        android:hint="@string/reg_new_pass2"
        android:layout_below="@+id/etNewPass0"
        android:layout_centerHorizontal="true"
        android:textColor="#ff000000"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#ff010101"/>
</RelativeLayout>