<!--
  ~ Copyright (C) 2014 - Simone Martucci <martucci.simone.91@gmail.com>
  ~ Copyright (C) 2014 - Mattia Mancini <mattia.mancini.1991@gmail.com>
  ~
  ~ This file is part of Foundme Studente.
  ~
  ~ Foundme Studente is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Foundme Studente is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Foundme Studente.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="it.uniroma2.foundme.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title"
        android:id="@+id/txvTitle"
        android:textColor="@android:color/black"
        style="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
        android:layout_above="@+id/etUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:theme="@android:style/TextAppearance"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etUserName"
        android:hint="@string/user"
        android:textColorHint="@android:color/black"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_alignStart="@+id/etPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:textColorHint="@android:color/black"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_below="@+id/etUserName"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivLogo"
        android:src="@drawable/tv"
        android:layout_above="@+id/txvTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access"
        android:id="@+id/btAccess"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:background="#ff429874"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/register"
        android:id="@+id/tvRegistration"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/btAccess"
        android:layout_centerHorizontal="true"
        android:linksClickable="true"
        android:theme="@android:style/TextAppearance"/>

</RelativeLayout>
