<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014 - Simone Martucci <martucci.simone.91@gmail.com>
  ~ Copyright (C) 2014 - Mattia Mancini <mattia.mancini.1991@gmail.com>
  ~
  ~ This file is part of Foundme Studente.
  ~
  ~ Foundme Studente is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Foundme Studente is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Foundme Studente.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/tv"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/cancella"
            android:id="@+id/btnCanc"
            android:layout_below="@+id/btnAdd"
            android:layout_alignStart="@+id/btnAdd"
            android:layout_marginTop="53dp"
            android:layout_gravity="center_horizontal"
            android:background="#ff429874"
            android:textColor="#ffffffff" />

        <Button
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/visualizza"
            android:id="@+id/btnVisualizza"
            android:layout_toEndOf="@+id/textView"
            android:layout_marginTop="55dp"
            android:layout_below="@+id/btnCanc"
            android:layout_alignStart="@+id/btnCanc"
            android:layout_gravity="center_horizontal"
            android:background="#ff429874"
            android:textColor="#ffffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:background="#ff429874">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/loginOk"
            android:id="@+id/textView"

            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/alt"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Studente"
            android:id="@+id/tvName"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:textColor="#ffffffff" />
    </LinearLayout>

    <Button
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/aggiungi"
        android:id="@+id/btnAdd"
        android:layout_gravity="center_horizontal"
        android:background="#ff429874"
        android:textColor="#ffffffff"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />


</RelativeLayout>